# Calc

./: CMakeLists.txt  opis_calc.docx  pom.xml
__hide/src/test/java/calc/: CalcTest.java
calc/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  calculator.cpp  calculator.h  test_calculator.cpp
src/main/java/calc/: Calc.java  Main.java
